--- a/language/SI.json
+++ b/language/SI.json
@@ -596,6 +596,8 @@
             "APK_DEV": "\n👨🏻‍💻 Developer : ",
             "APK_V": "\n📟 Version : ",
             "APK_SUM": "\n🔎info : ",
+            "TIKTOK": "ටික් ටොක් වීඩියො බාගත කරයි.",
+	    "FBDOWN": "Facebook වීඩියො බාගත කරයි.",
             "NOT_AVAILABLE": "👩‍🦰Amazone chat bot Disabled."
         },
         "covid": {
