--- a/language/EN.json
+++ b/language/EN.json
@@ -231,6 +231,7 @@
             "SEARCHING": "* 🔎 Searching...*",
             "WIKI_DESC": "Searches query on Wikipedia.",
             "IMG_DESC": "Searches for related pics on Google.",
+            "PIMG_DESC": "Searches for related pics on Pinterest.",
             "IMG": "Uploading photo ```{}``` number ```{} ```..."
         },
         "sticker": {
@@ -610,7 +611,8 @@
             "APK_V": "\n📟 Version : ",
             "APK_SUM": "\n🔎info : ", 
             "TIKTOK": "Download Tik tok video.",
-	    "FBDOWN": "Download Facebook Video.",    
+	    "FBDOWN": "Download Facebook Video.",
+	    "PTDOWN": "Download Pinterest Images.\n*Ex:* .pindown https://www.pinterest.com/pin/624522673326224603/",
             "NOT_AVAILABLE": "👩‍🦰Amazone chat bot Disabled."
         },
         "covid": {
